--- a/P008238.opf/meta.yml
+++ b/P008238.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P008238
+id: P008238
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W20855
   title: ར་བོང་དགོན་བཀྲ་ཤིས་ཆོས་འཕེལ་གླིང་གི་གདན་རབས
-  volume: ''
   author: ''
+  volumes: {}
